--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Challenge Submission</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="background-image img1"></div>
+    </div>
+    <div class="container">
+        <div class="background-image img2"></div>
+    </div>
+    <div class="container">
+        <div class="background-image img3"></div>
+    </div>
+    <div class="container">
+        
+    </div>
 </body>
 </html>
