completing the pages, finishing in the test file, about to relocate the indexes file.

--- a/test.html
+++ b/test.html
@@ -38,12 +38,12 @@
     <!-- second page -->
     <section class="second-section">
         <div class="container-fluid container-second-section">
-            <div class="row row-secondsec">
-                <div class="col col-secondsec-left offset-md-1"><h5 id="so-special-text">What's so special?</h5></div>
+            <div class="row row-secondsection">
+                <div class="col col-secondsection-left offset-md-1"><h5 id="so-special-text">What's so special?</h5></div>
             </div>
-            <div class="row row-secondsec">
-                <div class="col col-secondsec-left offset-md-1"><h2>THE GAMES</h2></div>
-                <div class="col-lg-7 col-secondsec-right">
+            <div class="row row-secondsection">
+                <div class="col-md-3 col-secondsection-left offset-md-1"><h2>THE GAMES</h2></div>
+                <div class="col-lg-7 col-secondsection-right">
                     <!-- carousel -->
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
@@ -80,18 +80,234 @@
                         </button>
                     </div>
                 </div>
-                <div class="col col-secondsec-left"></div>
+                <div class="col col-secondsection-left"></div>
             </div>
         </div>
     </section>
+<!-- third page -->
     <section class="third-section">
-        <div></div>
+        <div class="container-fluid container-third-section">
+            <div class="row row-thirdsection">
+                <div class="col-md offset-md-7 ">
+                    <div class="container-firstrow">
+                        <h5>What's so special?</h5>
+                        <h2>FEATURES</h2>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+            </div>
+                        <div class="row row-thirdsection">
+                <div class="col-md offset-md-7">
+                    <!-- l'm gonna do what's called a pro grammer move -->
+                    <div class="v1">
+                        <p>.</p>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                    <!-- this is stupid. -->
+                    <div class="container-secondrow">
+                        <div class="box-ellipse"><img src="assets/ellipse.svg" alt=""></div>
+                        <div class="box-menu">
+                            <p class="body">TRADITIONAL GAMES</p>
+                            <br>
+                            <p class="subtext">If you miss your childhood, we provide many traditional games here</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-thirdsection">
+                <div class="col-md offset-md-7">
+                    <div class="container-secondrow">
+                        <div class="box-ellipse"><img src="assets/ellipse-outline.svg" alt=""></div>
+                        <div class="box-menu">
+                            <p class="body">GAME SUIT</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-thirdsection">
+                <div class="col-md offset-md-7">
+                    <div class="container-secondrow">
+                        <div class="box-ellipse"><img src="assets/ellipse-outline.svg" alt=""></div>
+                        <div class="box-menu">
+                            <p class="body">TBD</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+<!-- fourth page -->
     <section class="fourth-section">
-        <div></div>
+        <div class="container-fluid container-fourth-section">
+            <div class="row row-fourthsection-1">
+                <div class="col-lg-4 col-fourthsection-left offset-md-1">
+                    <h2>SYSTEM</h2>
+                </div>
+                <div class="col-lg-7 col-fourthsection-right">
+                    <h5 id="Question">Can My Computer Run This Game?</h5>
+                </div>
+            </div>
+            <div class="row row-fourthsection-2">
+                <div class="col-lg-4 col-fourthsection-left offset-md-1">
+                    <h2>REQUIREMENTS</h2>
+                </div>
+            </div>
+            <div class="row row-fourthsection-3">
+                <div class="col-md-3 col-fourthsection-left-1 offset-md-1 border">
+                    <br>
+                    <p class="body">OS:</p>
+                    <p class="subtext">Windows 7 64-bit only</p>
+                    <p class="subtext">(No OSX support at this time)</p>
+                    <br>
+                </div>
+                <div class="col-md-3 col-fourthsection-right border">
+                    <br>
+                    <p class="body">PROCESSOR:</p>
+                    <p class="subtext">Intel Core 2 Duo @ 2.4 GHZ or</p>
+                    <p class="subtext">AMD Athlon X2 @ 2.8 GHZ</p>
+                    <br>
+                </div>
+            </div>
+            <div class="row row-fourthsection-4">
+                <div class="col-md-3 col-fourthsection-left-1 offset-md-1 border">
+                    <br>
+                    <p class="body">MEMORY:</p>
+                    <p class="subtext">4 GB RAM</p>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-md-3 col-fourthsection-right border">
+                    <br>
+                    <p class="body">STORAGE:</p>
+                    <p class="subtext">8 GB availabe space</p>
+                    <br>
+                    <br>
+                </div>
+            </div>
+            <div class="row row-fourthsection-5">
+                <div class="col-md-6 col-fourthsection-left-1 offset-md-1 border">
+                    <br>
+                    <p class="body">GRAPHICS:</p>
+                    <p class="subtext">NVIDIA GeForce GTX 660 2GB or</p>
+                    <p class="subtext">AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
+                    <br>
+                    <br>
+        </div>
     </section>
+<!-- fifth Page -->
     <section class="fifth-section">
-        <div></div>
+        <div class="container-fluid container-fifth-section">
+            <div class="row row-five">
+                <div class="col-lg-4 offset-md-1">
+                    <div class="container-fifthsection-left">
+                        <h2>TOP SCORES</h2>
+                        <br>
+                        <h5>This top scores from various games provided <br> on this platform</h5>
+                        <br>
+                        <button href="#" class="button-see-more">SEE MORE</button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="container-fifthsection-right">
+                        <div class="box-card card-1">
+                            <div class="ellipse"><img src="assets/ellipse-orange.png" alt=""></div>
+                            <div class="profile-picture"><img src="assets/evan-lahti.jpg" alt=""></div>
+                            <div class="username"><p>Evan Lahti</p></div>
+                            <div class="job"><p>PC Gamer</p></div>
+                            <div class="logo"><img src="assets/twitter-card.png" alt=""></div>
+                            <div class="commentary"><p>"One of my gaming highlights of the year"</p></div>
+                            <div class="date"><p>June 18, 2021</p></div>
+                        </div>
+                        <div class="box-card card-2">
+                            <div class="ellipse"><img src="assets/ellipse-orange.png" alt=""></div>
+                            <div class="profile-picture"><img src="assets/jada-griffin.jpg" style="width: 12%;" alt=""></div>
+                            <div class="username"><p>Jada Griffin</p></div>
+                            <div class="job"><p>Nerdreactor</p></div>
+                            <div class="logo"><img src="assets/twitter-card.png" alt=""></div>
+                            <div class="commentary"><p>"The next big thing in the world of streaming <br> and survival games"</p></div>
+                            <div class="date"><p>July 10, 2021</p></div>
+                        </div>                       
+                        <div class="box-card card-3">
+                            <div class="ellipse"><img src="assets/ellipse-orange.png" alt=""></div>
+                            <div class="profile-picture"><img src="assets/aaron-williams.jpg" style="width: 12%;" alt=""></div>
+                            <div class="username"><p>Aaron Williams</p></div>
+                            <div class="job"><p>Uproxx</p></div>
+                            <div class="logo"><img src="assets/twitter-card.png" alt=""></div>
+                            <div class="commentary"><p>"Snoop Dogg Playing The Wildly Entertaining <br>'SOS' Is Ridiculous"</p></div>
+                            <div class="date"><p>December 24, 2018</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- sixth Page -->
+    <section class="sixth-section">
+        <div class="container-fluid container-sixth-section">
+            <div class="row row-six">
+                <div class="col-lg-5 offset-md-1 col-sixthsection-left-1">
+                    <div class="container-fluid container-skull">
+                        <img src="assets/skull.png" class="skull-torch rounded-circle" alt="skull-torch">
+                    </div>
+                </div>
+                <div class="col-lg-5 col-sixthsection-right-1">
+                    <div class="container-fluid container-content-right">
+                        <h4 class="margin-text-sixthsection-right">Want to stay in <br> touch?</h4>
+                        <h2 class="margin-text-sixthsection-right">NEWSLETTER <br> SUBSCRIBE</h2>
+                        <p class="subtext subtext-sixthsection margin-text-sixthsection-right">In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about the game. We don't spam.</p>
+                        <div class="container-button-sixthsection">
+                            <div class="box-email-sixthsection-1">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" class="email-margin"><p class="label-font">Your email address</p></label>
+                                    <input type="email" class="form-control email-margin input-font" id="exampleInputEmail1" value="yourname@binar.co.id" aria-describedby="emailHelp">
+                                </div>
+                            </div>
+                            <div class="box-email-sixthsection-2">
+                                <button href="#" class="subscribe">SUBSCRIBE NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row row-six">
+                <div class="col-lg-8 offset-md-3">
+                    <div class="container-footer-1">
+                        <div class="box-footer"><a href="#" class="footer-font">MAIN</a></div>
+                        <div class="box-footer"><a href="#" class="footer-font">ABOUT</a></div>
+                        <div class="box-footer"><a href="#" class="footer-font">GAME FEATURES</a></div>
+                        <div class="box-footer"><a href="#" class="footer-font">SYSTEM REQUIREMENTS</a></div>
+                        <div class="box-footer"><a href="#" class="footer-font">QUOTES</a></div>
+                        <div class="box-footer"><img src="assets/facebook.svg" alt=""></div>
+                        <div class="box-footer"><img src="assets/twitter.svg" alt=""></div>
+                        <div class="box-footer"><img src="assets/vector.svg" alt=""></div>
+                        <div class="box-footer"><img src="assets/twitch.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-six">
+                <div class="col-lg-10 offset-md-1 border-bottom">.</div>
+            </div>
+            <div class="row row-six margin-top-footer-2">
+                <div class="col-lg-3 offset-md-1">
+                    <div class="container-footer-2">
+                        <div class="footer-2-box-1"><p class="label-font"><span>&copy;</span>2018 Your Games, Inc. All Rights Reserved</p></div>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="container-footer-3">
+                        <div class="footer-2-menugroup border-right"><a href="#" class="footer-font">Privacy Policy</a></div>
+                        <div class="footer-2-menugroup border-right"><a href="#" class="footer-font">Terms of Services</a></div>
+                        <div class="footer-2-menugroup"><a href="#" class="footer-font">Code of Conduct</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
